--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   google_sign_in: ^7.2.0
   flutter_riverpod: ^3.2.0
   flutter_dotenv: ^6.0.0
+  dio: ^5.9.1
 
 dev_dependencies:
   flutter_test:
